# XTreeViewer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  config.toml.example
.github/workflows/: release.yml
examples/: sample.jsonl  sample.yaml
issues/closed/: 01-html-parser.md  03-detail-view.md  05-streaming.md  06-search.md  07-configuration.md  08-decoding-attributes.md  09-unbounded-memory-in-search.md  11-content-display.md  11-json-primitives.md  12-help-screen.md  12-o-n-parent-lookup.md  14-clone-heavy-streaming-cache.md  15-navigation.md  19-missing-documentation.md  20-duplicate-attribute-parsing.md  21-duplicate-virtual-attributes-creation.md  22-duplicate-page-navigation.md  23-repetitive-treevariant-dispatch.md  attributes-node.md  force-format.md  hexdump-binary.md
issues/new/: 02-ldif-parser.md  04-lazy-loading.md  05-streaming.md  07-configuration.md  08-decoding-attributes.md  09-collapse-parent.md  10-attribute-order.md  10-ldif-index-memory-exhaustion.md  11-no-file-operation-timeouts.md  13-path-recomputation-every-frame.md  14-yaml.md  15-file-reopening-every-node-load.md  16-excessively-long-functions.md  16-jsonlines.md  17-magic-numbers-as-constants.md  18-incomplete-node-to-json.md  backtrace-char-boundary.md  ldif-parser-issues.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/parser/: html.rs  json.rs  jsonlines.rs  ldif.rs  mod.rs  toml.rs  xml.rs  yaml.rs
src/tree/: mod.rs  node.rs  streaming.rs
src/ui/: app.rs  detail_view.rs  mod.rs  tree_view.rs
tests/: integration_test.rs
