[package]
name = "xtv"
version = "0.1.0"
edition = "2024"
authors = ["Adrian Vollmer"]
description = "X Tree Viewer - A TUI application to view tree structures from serialized data"
license = "MIT"
repository = "https://github.com/AdrianVollmer/XTreeViewer"
readme = "README.md"

[[bin]]
name = "xtv"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# CLI argument parsing
clap = { version = "3.2", features = ["derive"] }

# Serialization and parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
scraper = "0.20"
ego-tree = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Base64 encoding/decoding
base64 = "0.21"

# Streaming support
lru = "0.12"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.13"
